# doorcam

./: .gitignore  CHANGES_KEYBOARD_INPUT.md  Cargo.toml  Cross.toml  DEPENDENCIES.md  KEYBOARD_DEBUG.md  KEYBOARD_FLAG_UPDATE.md  KEYBOARD_QUICK_START.md  KEYBOARD_TROUBLESHOOTING.md  MIGRATION_V4L_TO_GSTREAMER.md  Makefile  PIPELINE_SUMMARY.md  README.md  README_PI4.md  backlight-permissions.rules  calibrate.py  config.yaml  config_pi4.toml  dooranalyzer.py  doorcam.py  doorcam.service  doorcam.toml  doorcapture.py  doorconfig.py  doorscreen.py  doorstream.py  liborchestration.rlib  requirements.txt  run.py  saveimg.py  setup_pi4.sh  undistort.py  validate_config.py
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
.kiro/specs/doorcam-rust-rewrite/: design.md  requirements.md  tasks.md
examples/: display_demo.rs  motion_analyzer_demo.rs  pi4_camera.rs
scripts/: README.md  build.sh  install.sh  uninstall.sh
src/: analyzer.rs  analyzer_integration.rs  app_orchestration.rs  camera.rs  capture.rs  capture_integration.rs  config.rs  display.rs  display_integration.rs  error.rs  events.rs  frame.rs  health.rs  integration.rs  keyboard_input.rs  lib.rs  main.rs  orchestration.rs  recovery.rs  ring_buffer.rs  storage.rs  storage_integration.rs  streaming.rs  streaming_integration.rs  touch.rs  wal.rs
src/analyzer/: integration.rs  mod.rs  motion.rs  orchestrator.rs
src/app/: app_orchestration.rs  keyboard_input.rs  mod.rs  orchestration.rs  orchestrator.rs  runtime.rs  shutdown.rs  startup.rs  state.rs  tests.rs  types.rs
src/camera/: builder.rs  health.rs  integration.rs  interface.rs  mod.rs  tests.rs
src/capture/: core.rs  encode.rs  integration.rs  metadata.rs  mod.rs  overlay.rs  tests.rs
src/core/: error.rs  frame.rs  health.rs  mod.rs  recovery.rs
src/display/: controller.rs  converter.rs  integration.rs  mod.rs  stats.rs  tests.rs
src/doorcam/: config.yaml  dooranalyzer.py  doorcam.py  doorcapture.py  doorscreen.py  doorstream.py  run.py
src/infrastructure/: mod.rs  storage.rs  wal.rs
src/streaming/: adapters.rs  handlers.rs  integration.rs  mod.rs  prep.rs  server.rs  stats.rs  tests.rs
src/tools/: doorcam.service  saveimg.py  udev.sh
src/touch/: advanced.rs  handler.rs  mock.rs  mod.rs  tests.rs  types.rs  utils.rs
systemd/: README.md  doorcam-dev.service  doorcam.service  doorcam.service.template
test_captures/20251019_180525_483/: metadata.json
