[package]
name = "doorcam"
version = "0.1.0"
edition = "2021"
authors = ["Doorcam Team"]
description = "Rust-based door camera system with motion detection and streaming"
license = "MIT"

[dependencies]
# Configuration management
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
toml = "0.8"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Platform bindings
libc = "0.2"

# Atomic operations and concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# HTTP server
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true }

# Async streams
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1.0", optional = true }

# JSON serialization
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Terminal/keyboard input handling
crossterm = "0.27"

[dev-dependencies]
tempfile = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
# GStreamer for hardware acceleration
gstreamer = { version = "0.24", optional = true }
gstreamer-app = { version = "0.24", optional = true }
gstreamer-video = { version = "0.24", optional = true }
# Input device handling (Linux only)
evdev = { version = "0.12", optional = true }

[dependencies.image]
version = "0.24"
optional = true

[dependencies.imageproc]
version = "0.23"
optional = true

[dependencies.rusttype]
version = "0.9"
optional = true

[features]
default = ["camera", "motion_analysis", "streaming", "display", "video_encoding"]
camera = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]
motion_analysis = ["dep:image", "dep:imageproc", "dep:rusttype", "dep:gstreamer", "dep:gstreamer-app"]
streaming = ["dep:axum", "dep:tower", "dep:tower-http", "dep:async-stream", "dep:futures", "dep:bytes"]
display = ["dep:evdev", "dep:gstreamer", "dep:gstreamer-app"]
video_encoding = ["dep:gstreamer", "dep:gstreamer-app"]

[[bin]]
name = "doorcam"
path = "src/main.rs"





